--- a/rsocket-playboard-web/pom.xml
+++ b/rsocket-playboard-web/pom.xml
@@ -25,6 +25,8 @@
                 <version>1.8.0</version>
                 <configuration>
                     <installDirectory>target</installDirectory>
+                    <nodeVersion>v8.16.0</nodeVersion>
+                    <yarnVersion>v1.19.1</yarnVersion>
                 </configuration>
                 <executions>
                     <!-- Install our node and npm version to run npm/node scripts-->
@@ -33,10 +35,6 @@
                         <goals>
                             <goal>install-node-and-yarn</goal>
                         </goals>
-                        <configuration>
-                            <nodeVersion>v8.16.0</nodeVersion>
-                            <yarnVersion>v1.19.1</yarnVersion>
-                        </configuration>
                     </execution>
                     <!-- Install all project dependencies -->
                     <execution>
@@ -58,7 +56,7 @@
                             <goal>yarn</goal>
                         </goals>
                         <configuration>
-                            <arguments>yarn build</arguments>
+                            <arguments>build</arguments>
                         </configuration>
                     </execution>
                 </executions>
